--- a/SpringWeb_Module3/pom.xml
+++ b/SpringWeb_Module3/pom.xml
@@ -44,6 +44,13 @@
                 </exclusion>
             </exclusions>
         </dependency>
+        <!--   Тестовые данные-->
+        <dependency>
+            <groupId>com.github.javafaker</groupId>
+            <artifactId>javafaker</artifactId>
+            <version>1.0.2</version>
+        </dependency>
+        <!--   Тестовые данные-->
     </dependencies>
 
     <build>
