--- a/SpringWeb_Module5/src/main/resources/application.properties
+++ b/SpringWeb_Module5/src/main/resources/application.properties
@@ -3,6 +3,7 @@ spring.messages.basename=lang.messages
 spring.web.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
 
+
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
 spring.datasource.username=postgres
 spring.datasource.password=postgres
@@ -13,6 +14,9 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 
 #spring.sql.init.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+
+spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
