--- a/SpringWeb_Module5/src/main/resources/application.properties
+++ b/SpringWeb_Module5/src/main/resources/application.properties
@@ -14,11 +14,11 @@ spring.datasource.driver-class-name=org.postgresql.Driver
 spring.sql.init.mode=always
 
 #spring.sql.init.continue-on-error=true
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=none
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
 
-spring.liquibase.enabled=false
+spring.liquibase.enabled=true
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
-spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
