--- a/SpringWeb_Module6/src/main/resources/liquibase.properties
+++ b/SpringWeb_Module6/src/main/resources/liquibase.properties
@@ -1,4 +1,4 @@
-url=jdbc:postgresql://localhost:5432/postgres
+url=jdbc:postgresql://localhost:5432/bookstore
 username=postgres
 password=postgres
 driver=org.postgresql.Driver
