--- a/SpringWeb_Module7/src/main/resources/application.properties
+++ b/SpringWeb_Module7/src/main/resources/application.properties
@@ -1,19 +1,26 @@
 server.port=8085
-
 spring.messages.basename=lang.messages
 spring.web.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
 
-spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/postgres
+spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bookstore
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
-#spring.datasource.data=classpath:data.sql
-spring.sql.init.mode=always
 
-spring.jpa.hibernate.ddl-auto=create
+#spring.sql.init.schema-locations=classpath:schema.sql
+spring.jpa.properties.hibernate.connection.charSet=UTF-8
+spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
+#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
 
 upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
+
+spring.jpa.hibernate.ddl-auto=validate
+spring.sql.init.mode=never
+
+spring.liquibase.enabled=false
+spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
+
