- функционал отзывов и рейтинг книг, функционал купить отложить через куки;

--- a/SpringWeb_Module7/src/main/resources/application.properties
+++ b/SpringWeb_Module7/src/main/resources/application.properties
@@ -18,8 +18,9 @@ spring.jpa.show-sql=true
 upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
 
-spring.jpa.hibernate.ddl-auto=validate
-spring.sql.init.mode=never
+# меняем чтобы проинить БД create always
+spring.jpa.hibernate.ddl-auto=create-drop
+spring.sql.init.mode=always
 
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
