фунркционал с module8, недоделан frontend и связь с таблице User и password

--- a/SpringWeb_Module8/src/main/resources/application.properties
+++ b/SpringWeb_Module8/src/main/resources/application.properties
@@ -25,3 +25,9 @@ spring.sql.init.mode=always
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 
+auth.secret=skillbox
+server.servlet.session.tracking-modes=cookie
+
+#spring.security.oauth2.client.registration.facebook.client-id=17190536749219730
+#spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
+
