--- a/SpringWeb_Module8/src/main/resources/application.properties
+++ b/SpringWeb_Module8/src/main/resources/application.properties
@@ -28,6 +28,6 @@ spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
 auth.secret=skillbox
 server.servlet.session.tracking-modes=cookie
 
-#spring.security.oauth2.client.registration.facebook.client-id=17190536749219730
-#spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
+spring.security.oauth2.client.registration.github.client-id=86fdc32139d6c055a9f6
+spring.security.oauth2.client.registration.github.client-secret=d2f65090e01c5de48f9139011d4c3e4b80fa6a48
 
