поправлен front, не работет /login endpoint

--- a/SpringWeb_Module8/src/main/resources/application.properties
+++ b/SpringWeb_Module8/src/main/resources/application.properties
@@ -19,8 +19,8 @@ upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
 
 # меняем чтобы проинить БД create always
-spring.jpa.hibernate.ddl-auto=create-drop
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=never
 
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
