--- a/SpringWeb_Module8/pom.xml
+++ b/SpringWeb_Module8/pom.xml
@@ -60,6 +60,11 @@
             <artifactId>spring-boot-starter-data-jpa</artifactId>
             <version>2.3.4.RELEASE</version>
         </dependency>
+        <dependency>
+            <groupId>org.springframework.security</groupId>
+            <artifactId>spring-security-test</artifactId>
+            <version>4.2.20.RELEASE</version>
+        </dependency>
 
 
         <dependency>
