--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -2,6 +2,8 @@ server.port=8085
 spring.messages.basename=lang.messages
 spring.web.resources.static-locations=classpath:/spring-frontend/
 spring.thymeleaf.prefix=classpath:/spring-frontend/
+# ??? spring-boot-starter > 2.6
+spring.mvc.pathmatch.matching-strategy=ant_path_matcher
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bookstore_test
 spring.datasource.username=postgres
