--- a/pom.xml
+++ b/pom.xml
@@ -27,11 +27,19 @@
             <version>2.12.2</version>
         </dependency>
         <dependency>
+            <groupId>org.apache.commons</groupId>
+            <artifactId>commons-lang3</artifactId>
+            <version>3.12.0</version>
+        </dependency>
+
+
+        <dependency>
             <groupId>org.projectlombok</groupId>
             <artifactId>lombok</artifactId>
             <version>${lombock.version}</version>
             <scope>provided</scope>
         </dependency>
+
 
         <dependency>
             <groupId>javax.validation</groupId>
