--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -20,8 +20,8 @@ spring.jpa.show-sql=true
 upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
 
-spring.jpa.hibernate.ddl-auto=create
-spring.sql.init.mode=always
+spring.jpa.hibernate.ddl-auto=none
+spring.sql.init.mode=never
 
 spring.liquibase.enabled=false
 spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
