--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -20,7 +20,7 @@ spring.jpa.show-sql=true
 upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
 
-spring.jpa.hibernate.ddl-auto=create-drop
+spring.jpa.hibernate.ddl-auto=create
 spring.sql.init.mode=always
 
 spring.liquibase.enabled=false
