--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -1,35 +1,19 @@
-server.port=8085
-spring.messages.basename=lang.messages
-spring.web.resources.static-locations=classpath:/spring-frontend/
-spring.thymeleaf.prefix=classpath:/spring-frontend/
-# ??? spring-boot-starter > 2.6
-spring.mvc.pathmatch.matching-strategy=ant_path_matcher
+selenium.path=C://Users/SVAN/Downloads/chromedriver_win32/chromedriver.exe
 
 spring.datasource.url=jdbc:postgresql://127.0.0.1:5432/bookstore_test
 spring.datasource.username=postgres
 spring.datasource.password=postgres
 spring.datasource.driver-class-name=org.postgresql.Driver
 
-#spring.sql.init.schema-locations=classpath:schema.sql
 spring.jpa.properties.hibernate.connection.charSet=UTF-8
 spring.jpa.properties.hibernate.hbm2ddl.import_files_sql_extractor=org.hibernate.tool.hbm2ddl.MultipleLinesSqlCommandExtractor
 spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 spring.jpa.show-sql=true
-#spring.jpa.properties.hibernate.enable_lazy_load_no_trans=true
+spring.jpa.properties.hibernate.hbm2ddl.import_files=import-test.sql
 
 upload.path=/Users/Public/book-covers
 download.path=/Users/Public/book-files
 
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=create-drop
 spring.sql.init.mode=always
 
-spring.liquibase.enabled=false
-spring.liquibase.change-log=classpath:db/changelog/db.changelog-master.xml
-
-auth.secret=skillbox
-server.servlet.session.tracking-modes=cookie
-
-spring.security.oauth2.client.registration.github.client-id=86fdc32139d6c055a9f6
-spring.security.oauth2.client.registration.github.client-secret=d2f65090e01c5de48f9139011d4c3e4b80fa6a48
-spring.security.oauth2.client.registration.facebook.client-id=1719053674921973
-spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
