--- a/pom.xml
+++ b/pom.xml
@@ -78,10 +78,16 @@
             <artifactId>spring-security-test</artifactId>
             <version>4.2.20.RELEASE</version>
         </dependency>
+
         <dependency>
             <groupId>org.seleniumhq.selenium</groupId>
             <artifactId>selenium-java</artifactId>
-            <version>4.8.1</version>
+            <version>4.9.1</version>
+        </dependency>
+        <dependency>
+            <groupId>org.seleniumhq.selenium</groupId>
+            <artifactId>selenium-http-jdk-client</artifactId>
+            <version>4.9.1</version>
         </dependency>
 
 
