--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -33,3 +33,7 @@ spring.security.oauth2.client.registration.github.client-id=86fdc32139d6c055a9f6
 spring.security.oauth2.client.registration.github.client-secret=d2f65090e01c5de48f9139011d4c3e4b80fa6a48
 spring.security.oauth2.client.registration.facebook.client-id=1719053674921973
 spring.security.oauth2.client.registration.facebook.client-secret=840cdac1f9ce0296638a6979339256ac
+
+twiloo.ACCOUNT_SID=????? ?????
+twiloo.AUTH_TOKEN=????? ?????
+twilio.TWILIO_NUMBER=+1459344939439
